提交初始代码

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "myapp",
+  "name": "myparcel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build src/index.html"
